--- a/src/components/challenge/button.css
+++ b/src/components/challenge/button.css
@@ -7,6 +7,9 @@
 .cf-challenge-button-overlay {
   float: left;
   position: relative;
+  cursor: pointer;
+  border: 1px solid white;
+  box-sizing: border-box;
 }
 
 .check-overlay {
