--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 #root {
   margin: 10px;
+  position: relative;
+}
+
+@media  (min-width: 200px) 
+and (max-width: 812px) { 
+  #root {
+    margin: 0;
+    width: 100%;
+  }
 }
